# Cyberon

./: .gitignore  README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/example/cyberon/: MainActivity.kt
app/src/main/java/com/example/cyberon/data/: NsdDiscoveryManager.kt  P2PManager.kt  TransferRepository.kt  UdpDiscoveryManager.kt
app/src/main/java/com/example/cyberon/ui/: CyberonViewModel.kt
app/src/main/java/com/example/cyberon/ui/navigation/: Screen.kt
app/src/main/java/com/example/cyberon/ui/screens/: DashboardScreen.kt  DiscoverScreen.kt  HistoryScreen.kt  HomeScreen.kt  QRScanScreen.kt  ReceiveScreen.kt  SendScreen.kt  SettingsScreen.kt  TransferProgressScreen.kt
app/src/main/java/com/example/cyberon/ui/theme/: AppColors.kt  Color.kt  Theme.kt  Type.kt
app/src/main/java/com/example/cyberon/ui/utils/: QRGenerator.kt
app/src/main/res/drawable/: ic_launcher_foreground.xml
app/src/main/res/values/: strings.xml  styles.xml
gradle/: libs.versions.toml
